force-app/main/default/objects/Cuenta_Agrupacion__c/Cuenta_Agrupacion__c.object-meta.xml
<CustomObject>
    <label>Cuenta Agrupacion</label>
    <nameField>
        <displayFormat>AGRP-{00000}</displayFormat>
        <label>Nombre de Cuenta Agrupacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuenta Agrupaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>