force-app/main/default/objects/Cuenta_Agrupacion__c/fields/Agrupacion__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion__c</fullName>
    <label>Agrupación</label>
    <referenceTo>Agrupacion__c</referenceTo>
    <relationshipLabel>Cuenta Agrupaciones</relationshipLabel>
    <relationshipName>Cuenta_Agrupaciones</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>