force-app/main/default/objects/Cuenta_Agrupacion__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agrupaciones</relationshipLabel>
    <relationshipName>Cuenta_Agrupaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>